--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
-    <title>Responsive Portfolio Website HTML CSS| CodingNepal</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./index.css" />
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
@@ -18,7 +18,7 @@
     <!-- navgaition menu -->
     <nav>
       <div class="navbar">
-        <div class="logo"><a href="#">Portfolio.</a></div>
+        <div class="logo"><a href="#">Portfolio</a></div>
         <ul class="menu">
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -93,7 +93,7 @@
             <div class="experience">
               <div class="num">10</div>
               <div class="exp">
-                project  <br />
+               own project  <br />
                 Experience
               </div>
             </div>
@@ -113,9 +113,19 @@
             </div>
             <div class="box">
               <div class="topic">Python</div>
-              <div class="per">60%</div>
+              <div class="per">70%</div>
             </div>
+            <div class="boxes">
+              <div class="box">
+                <div class="topic">MYSQL</div>
+                <div class="per">90%</div>
+              </div>
           </div>
+          <div class="boxes">
+            <div class="box">
+              <div class="topic">Django</div>
+              <div class="per">70%</div>
+            </div>
         </div>
       </div>
     </section>
@@ -130,42 +140,42 @@
               <i class="fas fa-desktop"></i>
             </div>
             <div class="topic">Web Devlopment</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+            <p>I design and build responsive, visually appealing websites tailored to user needs. By focusing on clean and intuitive UI, I create seamless and interactive experiences for users. I use modern frontend technologies to ensure cross-device compatibility and optimized performance. My approach combines creativity with functionality to deliver impactful digital solutions.</p>
           </div>
           <div class="box">
             <div class="icon">
               <i class="fas fa-paint-brush"></i>
             </div>
-            <div class="topic">Graphic Design</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+            <div class="topic">Full-stack solutions</div>
+            <p>I offer comprehensive web development services, covering both frontend and backend to deliver complete applications. My full-stack expertise allows me to build seamless, integrated systems from user interfaces to databases. With a focus on efficiency and scalability, I create robust applications that are secure, fast, and tailored to client needs. From concept to deployment, I handle every step to bring your project to life.</p>
           </div>
           <div class="box">
             <div class="icon">
               <i class="fas fa-chart-line"></i>
             </div>
-            <div class="topic">Digital Marketing</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+            <div class="topic">Custom Web Applications</div>
+            <p>I specialize in building tailored web applications designed to meet unique business requirements. By creating custom features and functionalities, I ensure that each solution aligns perfectly with client goals. My process involves close collaboration to understand the vision and deliver a user-focused, scalable application. Whether it's an e-commerce platform, admin dashboard, or a specialized tool, I provide a personalized approach for impactful results.</p>
           </div>
           <div class="box">
             <div class="icon">
               <i class="fab fa-android"></i>
             </div>
-            <div class="topic">Icon Design</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+            <div class="topic">Python Development</div>
+            <p>Proficient in Python for creating efficient scripts, automation, and backend development. I build versatile applications with Python, utilizing its libraries to streamline complex tasks and processes.</p>
           </div>
           <div class="box">
             <div class="icon">
               <i class="fas fa-camera-retro"></i>
             </div>
-            <div class="topic">Photography</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+            <div class="topic">MySQL Database Management</div>
+            <p>Skilled in MySQL for designing, managing, and optimizing databases. I ensure data integrity, efficiency, and security for applications that require reliable data storage and retrieval.</p>
           </div>
           <div class="box">
             <div class="icon">
               <i class="fas fa-tablet-alt"></i>
             </div>
-            <div class="topic">Apps Devlopment</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+            <div class="topic">Django Web Framework</div>
+            <p>Experienced in Django for rapid, scalable web development. Using Django, I build secure, feature-rich applications with a focus on modularity and reusability, ensuring clean code and a smooth user experience.</p>
           </div>
         </div>
       </div>
@@ -177,7 +187,7 @@
         <div class="title"><span>Contact Me</span></div>
         <div class="text">
           <div class="topic">Have Any Project?</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam neque ipsum corrupti dolores, facere numquam voluptate aspernatur sit perferendis qui nisi modi! Recusandae deserunt consequatur voluptatibus alias repellendus nobis eligendi.</p>
+          <p>Have a project in mind? I’d be happy to discuss how my skills and experience can help bring your vision to reality. Whether you need full-stack development, a custom web application, or support in Python, Django, or MySQL, I’m here to provide tailored solutions. Let’s connect to explore how we can work together to achieve your goals.</p>
           <div class="button">
             <button>Let's Chat</button>
           </div>
